--- a/index.html
+++ b/index.html
@@ -42,44 +42,44 @@
 					<h1 class="swiper-title-1-r">BARRA ASIATICA</h1>
 					<div class="swiper-wrapper">
 						<!-- Slides -->
-						<div class="swiper-slide"><img src="img/Barra Asiatica/1Q7A1011.jpg" class="img-swipper-size" alt="barra asiatica 1"></div>
-						<div class="swiper-slide"><img src="img/Barra Asiatica/1Q7A1017.jpg" class="img-swipper-size" alt="barra asiatica 2"></div>
-						<div class="swiper-slide"><img src="img/Barra Asiatica/1Q7A1020.jpg" class="img-swipper-size" alt="barra asiatica 3"></div>
-						<div class="swiper-slide"><img src="img/Barra Asiatica/1Q7A6849.jpg" class="img-swipper-size" alt="barra asiatica 4"></div>
-						<div class="swiper-slide"><img src="img/Barra Asiatica/1Q7A6885.jpg" class="img-swipper-size" alt="barra asiatica 5"></div>
-						<div class="swiper-slide"><img src="img/Barra Asiatica/1Q7A6892.jpg" class="img-swipper-size" alt="barra asiatica 6"></div>
-						<div class="swiper-slide"><img src="img/Barra Asiatica/DSC03175.jpg" class="img-swipper-size" alt="barra asiatica 7"></div>
-						<div class="swiper-slide"><img src="img/Barra Asiatica/DSC03234.jpg" class="img-swipper-size" alt="barra asiatica 8"></div>
+						<div class="swiper-slide"><img loading="lazy" src="img/Barra Asiatica/1Q7A1011.jpg" class="img-swipper-size" alt="barra asiatica 1"></div>
+						<div class="swiper-slide"><img loading="lazy" src="img/Barra Asiatica/1Q7A1017.jpg" class="img-swipper-size" alt="barra asiatica 2"></div>
+						<div class="swiper-slide"><img loading="lazy" src="img/Barra Asiatica/1Q7A1020.jpg" class="img-swipper-size" alt="barra asiatica 3"></div>
+						<div class="swiper-slide"><img loading="lazy" src="img/Barra Asiatica/1Q7A6849.jpg" class="img-swipper-size" alt="barra asiatica 4"></div>
+						<div class="swiper-slide"><img loading="lazy" src="img/Barra Asiatica/1Q7A6885.jpg" class="img-swipper-size" alt="barra asiatica 5"></div>
+						<div class="swiper-slide"><img loading="lazy" src="img/Barra Asiatica/1Q7A6892.jpg" class="img-swipper-size" alt="barra asiatica 6"></div>
+						<div class="swiper-slide"><img loading="lazy" src="img/Barra Asiatica/DSC03175.jpg" class="img-swipper-size" alt="barra asiatica 7"></div>
+						<div class="swiper-slide"><img loading="lazy" src="img/Barra Asiatica/DSC03234.jpg" class="img-swipper-size" alt="barra asiatica 8"></div>
 					</div>
 				</div>
 			</div>
 
 			<!-- Barra de carnes -->
 			<div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
-				<div class="swiper-container swiper-asiatica">
+				<div class="swiper-container swiper-carnes">
 					<h1 class="swiper-title-1-r">BARRA CARNES</h1>
 					<div class="swiper-wrapper">
 						<!-- Slides -->
-						<div class="swiper-slide"><img src="img/Barra Carnes/1Q7A1038.jpg" class="img-swipper-size"alt="barra carnes 1"></div>
-						<div class="swiper-slide"><img src="img/Barra Carnes/1Q7A1051.jpg" class="img-swipper-size" alt="barra carnes 2"></div>
-						<div class="swiper-slide"><img src="img/Barra Carnes/1Q7A1067.jpg" class="img-swipper-size" alt="barra carnes 3"></div>
-						<div class="swiper-slide"><img src="img/Barra Carnes/DSC00368.jpg" class="img-swipper-size" alt="barra carnes 4"></div>
-						<div class="swiper-slide"><img src="img/Barra Carnes/DSC00373.jpg" class="img-swipper-size" alt="barra carnes 5"></div>
-						<div class="swiper-slide"><img src="img/Barra Carnes/DSC03318.jpg" class="img-swipper-size" alt="barra carnes 6"></div>
+						<div class="swiper-slide"><img loading="lazy" src="img/Barra Carnes/1Q7A1038.jpg" class="img-swipper-size"alt="barra carnes 1"></div>
+						<div class="swiper-slide"><img loading="lazy" src="img/Barra Carnes/1Q7A1051.jpg" class="img-swipper-size" alt="barra carnes 2"></div>
+						<div class="swiper-slide"><img loading="lazy" src="img/Barra Carnes/1Q7A1067.jpg" class="img-swipper-size" alt="barra carnes 3"></div>
+						<div class="swiper-slide"><img loading="lazy" src="img/Barra Carnes/DSC00368.jpg" class="img-swipper-size" alt="barra carnes 4"></div>
+						<div class="swiper-slide"><img loading="lazy" src="img/Barra Carnes/DSC00373.jpg" class="img-swipper-size" alt="barra carnes 5"></div>
+						<div class="swiper-slide"><img loading="lazy" src="img/Barra Carnes/DSC03318.jpg" class="img-swipper-size" alt="barra carnes 6"></div>
 					</div>
 				</div>
 			</div>
 
 			<!-- Barra pizza -->
 			<div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
-				<div class="swiper-container swiper-asiatica">
+				<div class="swiper-container swiper-pizza">
 					<h1 class="swiper-title-2-r">BARRA PIZZAS <br>
 						NAPOTELANAS</h1>
 					<div class="swiper-wrapper">
 						<!-- Slides -->
-						<div class="swiper-slide"><img src="img/Barra de Pizzas/1Q7A7164.jpg" class="img-swipper-size" alt="barra-pizza 1"></div>
-						<div class="swiper-slide"><img src="img/Barra de Pizzas/1Q7A7224.jpg" class="img-swipper-size" alt="barra-pizza 2"></div>
-						<div class="swiper-slide"><img src="img/Barra de Pizzas/DSC00123.jpg" class="img-swipper-size" alt="barra-pizza 3"></div>
+						<div class="swiper-slide"><img loading="lazy" src="img/Barra de Pizzas/1Q7A7164.jpg" class="img-swipper-size" alt="barra-pizza 1"></div>
+						<div class="swiper-slide"><img loading="lazy" src="img/Barra de Pizzas/1Q7A7224.jpg" class="img-swipper-size" alt="barra-pizza 2"></div>
+						<div class="swiper-slide"><img loading="lazy" src="img/Barra de Pizzas/DSC00123.jpg" class="img-swipper-size" alt="barra-pizza 3"></div>
 					</div>
 				</div>
 			</div>
@@ -87,64 +87,65 @@
 
 				<!-- Barra pinchos -->
 				<div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
-					<div class="swiper-container swiper-asiatica">
+					<div class="swiper-container swiper-pinchos">
 						<h1 class="swiper-title-1-r">BARRA PINCHOS</h1>
 						<div class="swiper-wrapper">
 							<!-- Slides -->
-							<div class="swiper-slide"><img src="img/Barra de Pinchos/1Q7A7184.jpg" class="img-swipper-size" alt="barra-pinchos 1"></div>
-							<div class="swiper-slide"><img src="img/Barra de Pinchos/1Q7A7187.jpg" class="img-swipper-size" alt="barra-pinchos 2"></div>
-							<div class="swiper-slide"><img src="img/Barra de Pinchos/1Q7A7209.jpg" class="img-swipper-size" alt="barra-pinchos 3"></div>
-							<div class="swiper-slide"><img src="img/Barra de Pinchos/1Q7A7222.jpg" class="img-swipper-size" alt="barra-pinchos 4"></div>
-							<div class="swiper-slide"><img src="img/Barra de Pinchos/DSC00112.jpg" class="img-swipper-size" alt="barra-pinchos 5"></div>
+							<div class="swiper-slide"><img loading="lazy" src="img/Barra de Pinchos/1Q7A7184.jpg" class="img-swipper-size" alt="barra-pinchos 1"></div>
+							<div class="swiper-slide"><img loading="lazy" src="img/Barra de Pinchos/1Q7A7187.jpg" class="img-swipper-size" alt="barra-pinchos 2"></div>
+							<div class="swiper-slide"><img loading="lazy" src="img/Barra de Pinchos/1Q7A7209.jpg" class="img-swipper-size" alt="barra-pinchos 3"></div>
+							<div class="swiper-slide"><img loading="lazy" src="img/Barra de Pinchos/1Q7A7222.jpg" class="img-swipper-size" alt="barra-pinchos 4"></div>
+							<div class="swiper-slide"><img loading="lazy" src="img/Barra de Pinchos/DSC00112.jpg" class="img-swipper-size" alt="barra-pinchos 5"></div>
 						</div>
 					</div>
 				</div>
 
 				<!-- Barra papas fritas -->
 				<div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
-					<div class="swiper-container swiper-asiatica">
+					<div class="swiper-container swiper-papas">
 						<h1 class="swiper-title-2-r">BARRA
 								<br> PAPAS FRITAS</h1>
 						<div class="swiper-wrapper">
 							<!-- Slides -->
-							<div class="swiper-slide"><img src="img/Barra de papas/1Q7A7250.jpg" class="img-swipper-size" alt="barra-papas 1"></div>
-							<div class="swiper-slide"><img src="img/Barra de papas/1Q7A7258.jpg" class="img-swipper-size" alt="barra-papas 2"></div>
-							<div class="swiper-slide"><img src="img/Barra de papas/1Q7A7268.jpg" class="img-swipper-size" alt="barra-papas 3"></div>
+							<div class="swiper-slide"><img loading="lazy" src="img/Barra de papas/1Q7A7250.jpg" class="img-swipper-size" alt="barra-papas 1"></div>
+							<div class="swiper-slide"><img loading="lazy" src="img/Barra de papas/1Q7A7258.jpg" class="img-swipper-size" alt="barra-papas 2"></div>
+							<div class="swiper-slide"><img loading="lazy" src="img/Barra de papas/1Q7A7268.jpg" class="img-swipper-size" alt="barra-papas 3"></div>
 						</div>
 					</div>
 				</div>
 
+        <!-- Barra papas cocteles -->
+        <div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
+          <div class="swiper-container swiper-coct">
+            <h1 class="swiper-title-1-r">CÓCTELES</h1>
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide"><img loading="lazy" src="img/Cocteles/1Q7A0856.jpg" class="img-swipper-size" alt="coct 1"></div>
+              <div class="swiper-slide"><img loading="lazy" src="img/Cocteles/1Q7A7283.jpg" class="img-swipper-size" alt="coct 2"></div>
+              <div class="swiper-slide"><img loading="lazy" src="img/Cocteles/1Q7A7296.jpg" class="img-swipper-size" alt="coct 3"></div>
+              <div class="swiper-slide"><img loading="lazy" src="img/Cocteles/DSC00165 2.jpg" class="img-swipper-size" alt="coct 4"></div>
+              <div class="swiper-slide"><img loading="lazy" src="img/Cocteles/DSC00228.jpg" class="img-swipper-size" alt="coct 5"></div>
+              <div class="swiper-slide"><img loading="lazy" src="img/Cocteles/DSC03049 2.jpg" class="img-swipper-size" alt="coct 6"></div>
+            </div>
+          </div>
+        </div>
+
 				<!-- Barra papas fritas -->
 				<div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
-					<div class="swiper-container swiper-asiatica">
+					<div class="swiper-container swiper-helados">
 					<h1 class="swiper-title-2-r">SALVADOR <br>
 						HELADOS</h1>
 						<div class="swiper-wrapper">
 							<!-- Slides -->
-							<div class="swiper-slide"><img src="img/Salvador Helados/DSC08428.jpg" class="img-swipper-size" alt="helados 2"></div>
-							<div class="swiper-slide"><img src="img/Salvador Helados/1Q7A6528.jpg" class="img-swipper-size" alt="helados 1"></div>
-							<div class="swiper-slide"><img src="img/Salvador Helados/DSC08451.jpg" class="img-swipper-size" alt="helados 3"></div>
-							<div class="swiper-slide"><img src="img/Salvador Helados/DSC08468 (1).jpg" class="img-swipper-size" alt="helados 4"></div>
-							<div class="swiper-slide"><img src="img/Salvador Helados/DSC08528.jpg" class="img-swipper-size" alt="helados 5"></div>
+							<div class="swiper-slide"><img loading="lazy" src="img/Salvador Helados/DSC08428.jpg" class="img-swipper-size" alt="helados 2"></div>
+							<div class="swiper-slide"><img loading="lazy" src="img/Salvador Helados/1Q7A6528.jpg" class="img-swipper-size" alt="helados 1"></div>
+							<div class="swiper-slide"><img loading="lazy" src="img/Salvador Helados/DSC08451.jpg" class="img-swipper-size" alt="helados 3"></div>
+							<div class="swiper-slide"><img loading="lazy" src="img/Salvador Helados/DSC08468 (1).jpg" class="img-swipper-size" alt="helados 4"></div>
+							<div class="swiper-slide"><img loading="lazy" src="img/Salvador Helados/DSC08528.jpg" class="img-swipper-size" alt="helados 5"></div>
 						</div>
 					</div>
 				</div>
 
-				<!-- Barra papas cocteles -->
-				<div class="col-sm-12 col-md-4 p0 effect-brig h-fix">
-					<div class="swiper-container swiper-asiatica">
-						<h1 class="swiper-title-1-r">CÓCTELES</h1>
-						<div class="swiper-wrapper">
-							<!-- Slides -->
-							<div class="swiper-slide"><img src="img/Cocteles/1Q7A0856.jpg" class="img-swipper-size" alt="coct 1"></div>
-							<div class="swiper-slide"><img src="img/Cocteles/1Q7A7283.jpg" class="img-swipper-size" alt="coct 2"></div>
-							<div class="swiper-slide"><img src="img/Cocteles/1Q7A7296.jpg" class="img-swipper-size" alt="coct 3"></div>
-							<div class="swiper-slide"><img src="img/Cocteles/DSC00165 2.jpg" class="img-swipper-size" alt="coct 4"></div>
-							<div class="swiper-slide"><img src="img/Cocteles/DSC00228.jpg" class="img-swipper-size" alt="coct 5"></div>
-							<div class="swiper-slide"><img src="img/Cocteles/DSC03049 2.jpg" class="img-swipper-size" alt="coct 6"></div>
-						</div>
-					</div>
-				</div>
 
 				<div class="d-none d-md-block col-md-8 h-fix">
 					<h1 class="text-center paseo-div">EL PASEO GASTRONOMICO <br>
