--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 					<div>
 						<i class="fa fa-map-marker"></i>
 						<h3>DIRECCIÓN</h3>
-						<p><a href="https://goo.gl/maps/bNwo4dZU26irnAiU9">PEDIR DIRECCION PARA COMPETAR<br>
+						<p><a href="https://goo.gl/maps/bNwo4dZU26irnAiU9">Direccion 123123<br>
 				  	BARRIO, ROSARIO.<br>
 				  	Argentina</a></p>
 					</div>
@@ -198,7 +198,7 @@
 					<div>
 						<i class="fa fa-envelope-o"></i>
 						<h3>Email</h3>
-						<p><a href="kunkelbenjamin08@gmail.com" target="_blank">kunkelbenjamin08@gmail.com</a></p>
+						<p>pichincha@gmail.com </p>
 					</div>
 				</div>
 			</div>
@@ -209,7 +209,7 @@
 	<footer>
 		<div class="container_footer">
 			<div class="left">
-				<p>© 2020 <span>Pagina de prueba, Bragado, Buenos Aires, Argentina.</span></p>
+				<p>© 2021 <span> Sitio creado con ❤️ por Bluppi </span></p>
 			</div>
 			<a href="https://www.instagram.com/benjakunkel/" target="_blank">
 				<i class="fa fa-instagram"></i>
